--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,13 @@
 /* google font */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&family=VT323&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@900&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Tilt+Warp&family=Vesper+Libre:wght@900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Tilt+Warp&family=Vesper+Libre:wght@900&display=swap');
+
 /* layout */
 :root {
   --primary: #1aac83;
