--- a/frontend/src/pages/Auth.css
+++ b/frontend/src/pages/Auth.css
@@ -124,7 +124,7 @@ nav button {
 /* auth forms */
 form.signup,
 form.login {
-  max-width: 400px;
+  /* max-width: 400px; */
   /* margin: 40px auto; */
   padding: 20px;
   background: #fff;
